--- a/trunk/shotserver/shotserver04/factories/templates/factories/details.html
+++ b/trunk/shotserver/shotserver04/factories/templates/factories/details.html
@@ -141,6 +141,7 @@
 {{ _("For every problem report, there's probably 10 to 100 users who had the same problem but didn't report it.") }}
 {{ _("Click on the error code for documentation, or the error message to see the screenshot.") }}
 </p>
+{% if problem_report_result %}<p class="admonition success">{{ problem_report_result }}</p>{% endif %}
 <table class="problems vertical">
 <thead>
 <tr>
@@ -152,7 +153,7 @@
 </thead>
 <tbody>
 {% for problem in problems_list %}
-<tr class="{% cycle row1,row2 %}">
+<tr class="{% cycle row1,row2 %}{% ifequal problem highlight %} highlight{% endifequal %}">
 <td>{% if problem.help_available %}<a href="http://trac.browsershots.org/wiki/FactoryErrors#a{{ problem.code }}">{% endif %}{{ problem.code }}{% if problem.help_available %}</a>{% endif %}</td>
 <td>{{ problem|human_link }}</td>
 <td>{{ problem.screenshot.browser.browser_group }} {{ problem.screenshot.browser.major}}.{{ problem.screenshot.browser.minor }}</td>
