--- a/trunk/shotserver/shotserver04/common/templates/adbase.html
+++ b/trunk/shotserver/shotserver04/common/templates/adbase.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
+{% load ads %}
 
 {% block leaderboard %}
 {% if not http_request.is_secure %}
 {% if not http_request.user.is_authenticated %}
-{% load ads %}{% ads_leaderboard %}
+<div id="leaderboard">{% ads_leaderboard %}</div>
 {% endif %}
 {% endif %}
 {% endblock %}
