--- a/trunk/shotserver/shotserver04/static/css/style.css
+++ b/trunk/shotserver/shotserver04/static/css/style.css
@@ -352,4 +352,11 @@ ul.no-bullets li {
   margin: 0;
 }
 
-div.leaderboard { margin: 1em 0; }
+div#leaderboard {
+  margin: 1em 0;
+  clear: both;
+}
+div#skyscraper {
+  margin: 0 0 1em 1em;
+  float: right;
+}
