--- a/trunk/shotserver/shotserver04/screenshots/templates/screenshots/overview.html
+++ b/trunk/shotserver/shotserver04/screenshots/templates/screenshots/overview.html
@@ -7,7 +7,9 @@
 {% block content %}
 <h1>{{ _("recent screenshots")|capfirst }}</h1>
 
+<div style="position:absolute; left:1040px; width:120px">
 {% show_ad skyscraper %}
+</div>
 
 {{ previews }}
 
