--- a/trunk/shotserver/shotserver04/screenshots/templates/screenshots/details.html
+++ b/trunk/shotserver/shotserver04/screenshots/templates/screenshots/details.html
@@ -100,7 +100,7 @@ width="512" height="{{ screenshot.get_large_height }}"
 </table>
 
 {% if problem_form %}
-<div id="problem-report" class="clear">
+<div id="problem-report" class="clear-left">
 <p><a id="report" name="report" href="#report">{{ _("Report a problem with this screenshot?") }}</a></p>
 <div id="report-form{% if problem_form.message.errors %}-errors{% endif %}">
 <form action="#report" method="post" id="problem_form">
@@ -122,7 +122,7 @@ width="512" height="{{ screenshot.get_large_height }}"
 </div>
 {% endif %}
 
-<div id="try-again" class="clear">
+<div id="try-again" class="clear-left">
 <p>
 <a href="/?browsers={{ screenshot.browser.browser_group.name|lower }}&amp;url={{ screenshot.website.url }}">Request a new screenshot of {{ screenshot.browser.browser_group.name }}?</a><br />
 <a href="/?browsers={{ screenshot.factory.operating_system.platform.name|lower }}_{{ screenshot.browser.browser_group.name|lower }}&amp;url={{ screenshot.website.url }}">Request a new screenshot of {{ screenshot.browser.browser_group.name }} on {{ screenshot.factory.operating_system.platform.name }}?</a><br />
