--- a/trunk/shotserver/shotserver04/websites/templates/websites/details.html
+++ b/trunk/shotserver/shotserver04/websites/templates/websites/details.html
@@ -36,7 +36,7 @@ Pages:
 {{ request_group.previews }}
 {% endfor %}
 
-<p class="clear">
+<p class="clear-left">
 <a href="/?url={{ website.url|urlencode }}">{{ _("Request new screenshots?") }}</a>
 </p>
 
